[package]
name = "user_agent_analyzer"
version = "0.1.0"
edition = "2021"
publish = false
homepage = "https://github.com/yezz123/gRPC-user-agent"
repository = "https://github.com/yezz123/gRPC-user-agent.git"
description = "A user agent analyzer using gRPC"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11.0", features = ["transport"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12.4"
reqwest = "0.12.4"

[build-dependencies]
tonic-build = "0.11.0"
prost = "0.12.4"

[dev-dependencies]
tokio-test = "0.4"

[lints.clippy]
dbg_macro = "warn"
